// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Edit Test: After create and geteditorig 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 420,
        "myString": "myText",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "result": Object {
          "id": 0,
          "myNum": 420,
          "myString": "myText",
        },
      },
    },
    "users": Object {
      "0": Object {
        "result": Object {
          "email": "user",
          "id": 0,
        },
      },
    },
  },
  "updateState": Object {},
}
`;

exports[`DbStore Edit Test: Before submit patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 420,
        "myString": "myText",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "result": Object {
          "id": 0,
          "myNum": 420,
          "myString": "myText",
        },
      },
    },
    "users": Object {
      "0": Object {
        "result": Object {
          "email": "user",
          "id": 0,
        },
      },
    },
  },
  "updateState": Object {},
}
`;

exports[`DbStore Edit Test: after create 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "loading": false,
  "original": {
    "result": {
      "myString": "myText",
      "myNum": 420,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: after edit getorig 1`] = `
Object {
  "formData": Object {
    "email": "user",
    "myNum": 420,
    "myString": "myText",
    "password": "",
  },
}
`;

exports[`DbStore Edit Test: after purposely set invalid err 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: after submitted patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 420,
        "myString": "myText",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "result": Object {
          "id": 0,
          "myNum": 240,
          "myString": "changed",
        },
      },
    },
    "users": Object {
      "0": Object {
        "result": Object {
          "email": "user",
          "id": 0,
        },
      },
    },
  },
  "updateState": Object {
    "0formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 240,
        "myString": "changed",
      },
    },
  },
}
`;

exports[`DbStore Edit Test: after successfull save 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: before set by getorig 1`] = `
Object {
  "formData": Object {
    "email": "user",
    "myNum": null,
    "myString": null,
    "password": "",
  },
}
`;

exports[`DbStore Edit Test: hidden in update 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "hide": {
                "create": false,
                "update": true,
                "find": false
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: hidden text 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "hide": {
                "create": true
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "hide": {
          "create": true
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: not hidden in update 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "hide": {
                "create": true,
                "update": false,
                "find": false
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "hide": {
          "create": true,
          "update": false,
          "find": false
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: prefix After create and geteditorig 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 1,
        "myNum": 24,
        "myString": "secondOBJ",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "result": Object {
          "id": 0,
          "myNum": 240,
          "myString": "changed",
        },
      },
      "1": Object {
        "result": Object {
          "id": 1,
          "myNum": 24,
          "myString": "secondOBJ",
        },
      },
    },
    "users": Object {
      "0": Object {
        "result": Object {
          "email": "user",
          "id": 0,
        },
      },
    },
  },
  "updateState": Object {
    "0formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 240,
        "myString": "changed",
      },
    },
    "formModel": undefined,
  },
}
`;

exports[`DbStore Edit Test: prefix Before submit patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 1,
        "myNum": 24,
        "myString": "secondOBJ",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "result": Object {
          "id": 0,
          "myNum": 240,
          "myString": "changed",
        },
      },
      "1": Object {
        "result": Object {
          "id": 1,
          "myNum": 24,
          "myString": "secondOBJ",
        },
      },
    },
    "users": Object {
      "0": Object {
        "result": Object {
          "email": "user",
          "id": 0,
        },
      },
    },
  },
  "updateState": Object {
    "0formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 240,
        "myString": "changed",
      },
    },
    "formModel": undefined,
  },
}
`;

exports[`DbStore Edit Test: prefix after create 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 1,
  "prefix": "editPrefix",
  "loading": false,
  "original": {
    "result": {
      "myString": "secondOBJ",
      "myNum": 24,
      "id": 1
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: prefix after edit getorig 1`] = `
Object {
  "formData": Object {
    "email": "user",
    "myNum": 24,
    "myString": "secondOBJ",
    "password": "",
  },
}
`;

exports[`DbStore Edit Test: prefix after purposely set invalid err 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 1,
  "prefix": "editPrefix",
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "SECOND change",
      "myNum": 6543,
      "id": 1
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "SECOND change",
      "myNum": 6543,
      "id": 1
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: prefix after submitted patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 1,
        "myNum": 24,
        "myString": "secondOBJ",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "result": Object {
          "id": 0,
          "myNum": 240,
          "myString": "changed",
        },
      },
      "1": Object {
        "result": Object {
          "id": 1,
          "myNum": 6543,
          "myString": "SECOND change",
        },
      },
    },
    "users": Object {
      "0": Object {
        "result": Object {
          "email": "user",
          "id": 0,
        },
      },
    },
  },
  "updateState": Object {
    "0formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 240,
        "myString": "changed",
      },
    },
    "editPrefix.1formModel": Object {
      "result": Object {
        "id": 1,
        "myNum": 6543,
        "myString": "SECOND change",
      },
    },
    "formModel": undefined,
  },
}
`;

exports[`DbStore Edit Test: prefix after successfull save 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 1,
  "prefix": "editPrefix",
  "state": {
    "result": {
      "myString": "SECOND change",
      "myNum": 6543,
      "id": 1
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "SECOND change",
      "myNum": 6543,
      "id": 1
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: prefix before set by getorig 1`] = `
Object {
  "formData": Object {
    "email": "user",
    "myNum": null,
    "myString": null,
    "password": "",
  },
}
`;

exports[`DbStore Edit Test: prefix result of edit fetch 1`] = `
Object {
  "result": Object {
    "id": 1,
    "myNum": 24,
    "myString": "secondOBJ",
  },
}
`;

exports[`DbStore Edit Test: prefix updated record 1`] = `
Object {
  "result": Object {
    "id": 1,
    "myNum": 6543,
    "myString": "SECOND change",
  },
}
`;

exports[`DbStore Edit Test: prefix while loading 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 1,
  "prefix": "editPrefix",
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "SECOND change",
      "myNum": 6543,
      "id": 1
    }
  },
  "loading": true,
  "original": {
    "result": {
      "myString": "SECOND change",
      "myNum": 6543,
      "id": 1
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: resetOnMount 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "hide": {
                "create": false,
                "update": true,
                "find": false
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "resetOnMount": true,
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": false,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;

exports[`DbStore Edit Test: result of edit fetch 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 420,
    "myString": "myText",
  },
}
`;

exports[`DbStore Edit Test: updated record 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 240,
    "myString": "changed",
  },
}
`;

exports[`DbStore Edit Test: while loading 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "state": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "loading": true,
  "original": {
    "result": {
      "myString": "changed",
      "myNum": 240,
      "id": 0
    }
  },
  "fields": [
    {
      "mapTo": "myString",
      "type": 2,
      "validate": {
        "required": {
          "type": 2
        }
      }
    },
    {
      "mapTo": "myNum",
      "type": 3,
      "validate": {}
    }
  ]
}
</div>
`;
